# teach_python

./: .gitignore  docker_compose.yml  ghgg.py  my_base.db  pyproject.toml
teach_python/: apps.py  test.py
teach_python/common/: list_cmds.py  text_for_db.py
teach_python/database/: engine.py  models.py  orm_query.py
teach_python/filters/: chat_types.py
teach_python/handlers/: admin_private.py  user_grups.py  user_private.py
teach_python/kbrds/: in_line.py  reply.py
teach_python/middlewares/: db.py
