[tool.poetry]
name = "teach-python"
version = "0.1.0"
description = ""
authors = ["Alex <saninorun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.22.2"
black = "^24.3.0"
aiogram = "^3.4.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
